all non research projects

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,7 @@
     Kinematic Prediction Models to Characterize Ankle Impedance},
     year = {2024},
     journal = {Dynamic Walking},
-    pdf = {dynamic_walking_poster_2024.pdf},
+    poster = {dynamic_walking_poster_2024.pdf},
     preview = {dynamic_walking_figs.pdf}
 }
 
