add rehabweek to bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,3 +13,13 @@
     preview = {dynamic_walking_figs.pdf}
 }
 
+@article{rehabweek25,
+    author = {Porter-Honicky, Nana and Rouse, Elliott},
+    title = {Forecasting Gait Kinetics and Kinematics for Biological 
+    Joint Impedance Estimation Using Machine Learning},
+    year = {2025},
+    journal = {Rehab Week},
+    poster = {rehabweek_2025.pdf},
+    preview = {rehabweek_2025.pdf}
+}
+
